# EEG_theme_park

./: .gitignore  README.md  __main__.py  eeg_theme_park.spec  pyproject.toml  requirements.txt
lab_meeting_tests/: test_times.xlsx  tests.py
lab_meeting_tests/test_signals/results/: analysis_log.txt  analysis_log_1.txt  eeg_theme_park_errors.xlsx  eeg_theme_park_errors_1.xlsx  eeg_theme_park_errors_2.xlsx  eeg_theme_park_results.xlsx  eeg_theme_park_results_1.xlsx  eeg_theme_park_results_2.xlsx  pipeline_2.ppl
lab_meeting_tests/test_signals/results_focus_times/: analysis_log.txt  eeg_theme_park_errors.xlsx
lab_meeting_tests/test_signals/results_full_signal/: eeg_theme_park_errors.xlsx  pipeline.ppl
lab_meeting_tests/test_signals/results_retest_focus/: analysis_log.txt  eeg_theme_park_errors.xlsx  eeg_theme_park_results.xlsx
lab_meeting_tests/test_signals/results_retest_full/: analysis_log.txt  eeg_theme_park_errors.xlsx  eeg_theme_park_results.xlsx
lab_meeting_tests/test_signals_new/results/: analysis_log.txt  analysis_log_1.txt  eeg_theme_park_errors.xlsx  eeg_theme_park_errors_1.xlsx  eeg_theme_park_results.xlsx  (+2 more)
modes/: mode_manager.py
modes/batch_processing/: batch_processing.py  batch_utils.py  pipeline_gui.py
modes/playground/: file_commands.py  playground.py
test_signals_detti/: detti_2020.xlsx
tests/: test_times.xlsx  tests.py
utils/: eeg_analyzers.py  eeg_signal.py  eeg_visualizers.py  gui_utilities.py  loaders.py  misc_utils  pipeline.py  signal_functions.py
utils/NEURAL_py_fork/: README.md  preprocessing_EEG.py  spectral_features.py
(+23 files in other folders)
